--- a/scss/home/home.scss
+++ b/scss/home/home.scss
@@ -1,7 +1,10 @@
 .container {
-    background-color: antiquewhite;
+    width: 100%;
+    height: 100%;
+    background-color: #e3dac9;
     padding: 20px;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
+    flex-direction: column;
 }
