--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,10 @@
 @import "structure.scss";
-@import "components/components.scss";
+@import "bpc.scss";
+@import "navi.scss";
+@import "hero-area.scss";
+@import "logo-area.scss";
 @import "home/home.scss";
+@import "dispatchContainer.scss";
+@import "components/components.scss";
+@import "below-dispatch.scss";
+
